CHANGES BETWEEN 2.14.1 and 2.14.2 (2026-Mmm-DD)

  I. IMPORTANT CHANGES

  - Several  changes  related  to  LCD  filtering  are implemented  to
    achieve better performance and encourage sound practices.

    . Setting the filter weights with FT_Face_Properties  is no longer
      supported.  The default and light filters  are optimized to work
      with any face.

    . The legacy libXft LCD filter algorithm is no longer provided.


  II. IMPORTANT BUG FIXES

  - The italic angle in `PS_FontInfo`  is now stored  as a fixed-point
    value  in degrees  for  all  Type 1 fonts  and  their derivatives,
    consistent  with  CFF  fonts  and  common  practices.  The  broken
    underline position and thickness values are fixed for CFF fonts.


======================================================================

CHANGES BETWEEN 2.14.0 and 2.14.1 (2025-Sep-11)

  I. IMPORTANT BUG FIXES

  - This is  an emergency release that  fixes a couple of  severe bugs
    introduced  in  version  2.14.0  and discovered  right  after  the
    release; see issues  #1349, #1353, #1354, #1355, and  #1356 in our
    bug tracker at

      https://gitlab.freedesktop.org/freetype/freetype/-/issues


======================================================================

CHANGES BETWEEN 2.13.3 and 2.14.0 (2025-Sep-06)

  I. IMPORTANT CHANGES

  - A new  configuration macro `FT_CONFIG_OPTION_USE_HARFBUZZ_DYNAMIC`
    is available to load the HarfBuzz library dynamically (in addition
    to the standard static and  dynamic linking modes);  cmake, meson,
    and autotools support have  been updated  accordingly.  Using this
    new feature  makes  it possible  to avoid  the circular dependency
    between HarfBuzz and FreeType.

    A  side effect  of this  change is  that FreeType  no longer  uses
    HarfBuzz header files (if HarfBuzz support is activated).

    This code was contributed by Behdad Esfahbod.

  - The auto-hinter got new abilities.
